--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.Poster {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  position: relative;
+  overflow: hidden;
+
+
+  margin: auto;
+  margin-top: 10%;
+
+  height: 500px;
+  width: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+#Poster {
+  margin: auto;
+
+  height: 100%;
+  width: 100%;
+
+  transition: .5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Poster:hover #Poster {
+  transform: scale(1.1);
+}
+
+.Film-Description-Card {
+  background-color: white;
+
+  display: flex;
+  flex-direction: column;
+
+  position: absolute;
+  overflow: hidden;
+  padding: 10px;
+
+  margin: auto;
+  margin-top: 10%;
+
+  height: 500px;
+  width: 300px;
+
+  transition: .5s;
+  transform: translateY(100%);
+}
+
+.Poster:hover .Film-Description-Card {
+  transform: translateY(0%);
 }
