--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,6 @@
   flex-direction: column;
 
   position: absolute;
-  overflow: hidden;
   padding: 10px;
 
   margin: auto;
@@ -53,6 +52,26 @@
 
   transition: .5s;
   transform: translateY(100%);
+}
+
+#Film-Title {
+  color: black;
+  font-family: "";
+  font-size: "";
+  font-weight: "";
+
+  margin: auto;
+  margin-top: 0px;
+}
+
+#Film-Description {
+  color: black;
+  font-family: "";
+  font-size: "";
+  font-weight: "";
+
+  margin: auto;
+  margin-top: 0px;
 }
 
 .Poster:hover .Film-Description-Card {
