--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
   transform: translateY(100%);
 }
 
+
 #Film-Title {
   color: black;
   font-family: "";
@@ -81,13 +82,14 @@
 #Film-Sub-Title {
   color: black;
   font-family: "";
-  font-size: "";
+  font-size: 20px;
   font-weight: "";
   
   text-align: center;
 
   margin: auto;
   margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 #Film-Description {
