--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,14 @@
 
 
 .Button-Container {
+  background-color: white;
   position: fixed;
 
   bottom: 50px;
   right: 50px;
 
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
 
   transition: .5s;
   transition-timing-function: ease-in;
